Add updated cv files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/Debolz.jpeg" alt="Adebola's profile picture" width="250" height="250"></td>
+        <td><img src="images/Debolz.png" alt="Adebola's profile picture" width="250" height="250"></td>
         <td>
           <h1>Adebola Rotimi-Silva</h1>
           <p><strong><em>Head of Operations - Technical<br>Hyperware Systems Ltd.</em></strong></p>
