Updated CV files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Adebola's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: blue;">
   <div>
     <table cellspacing="20">
       <tr>
